--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     </nav>
         <main>
             <section>
+                <figure>
                 <img class="picture" src="https://media-exp1.licdn.com/dms/image/C5603AQGPvsHQGbXAgg/profile-displayphoto-shrink_800_800/0/1653559236349?e=1671062400&v=beta&t=mISPUPrEBYBIu6spx61ZQI347K7PfX2LqwR7U04WZ88" alt="My Cv">
+                <figcaption><em>Jose Alfredo Aguado Mesa</em></figcaption>
+                </figure>
                 <div><botton id="btn-flotante"></botton>
                     <h2 id="name">Jose Alfredo Aguado Mesa</h2> 
                 </div>
@@ -37,11 +40,11 @@
             <div>
                 <h2 id="Aboutme"> About Me</h2>
                 <h3> Skills</h3>
-                <u1>
+                <li>
                     <li>Highly Adaptive and flexible to change.</li>
                     <li>Attention to Detail.</li>
                     <li>Communication skills.</li>
-                </u1>
+                </li>
             </div>
             <button type="button">Click</button> 
         </main>
